# BackEnd/src/main/java/it/uniromatre/breadexchange2_0/controller/BakeryController.java
@@ -2,9 +2,16 @@ package it.uniromatre.breadexchange2_0.controller;
 
 
 import it.uniromatre.breadexchange2_0.bakery.BakeryService;
+import it.uniromatre.breadexchange2_0.bakery.Week.ModifyWeekRequest;
+import it.uniromatre.breadexchange2_0.bakery.Week.Week;
+import it.uniromatre.breadexchange2_0.bakery.Week.WeekService;
+import it.uniromatre.breadexchange2_0.bakery.hours.WeekDay;
+import it.uniromatre.breadexchange2_0.bakery.hours.WeekDayService;
 import lombok.AllArgsConstructor;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import lombok.Getter;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("bakery")
@@ -12,6 +19,22 @@ import org.springframework.web.bind.annotation.RestController;
 public class BakeryController {
 
     private final BakeryService bakeryService;
+    private final WeekService weekService;
+    private final WeekDayService weekDayService;
+
+
+
+
+    @PostMapping("/updateWeek")
+    public ResponseEntity<?> updateWeek(
+            @RequestBody ModifyWeekRequest request,
+            @RequestParam(name = "IdBakery") Integer idBackery,
+            Authentication connectedUser
+            ){
+        this.weekService.modificaGiorno(connectedUser,request,idBackery);
+        return ResponseEntity.accepted().build();
+    }
+
 
 
 
