# BackEnd/src/main/java/it/uniromatre/breadexchange2_0/controller/FrontEndController.java
@@ -2,7 +2,9 @@ package it.uniromatre.breadexchange2_0.controller;
 
 import it.uniromatre.breadexchange2_0.bakery.BakeryService;
 import it.uniromatre.breadexchange2_0.bakery.BakeryfrontEndResponse;
+import it.uniromatre.breadexchange2_0.bakery.PlanAddBkery;
 import it.uniromatre.breadexchange2_0.bakery.RandomDataBakeryResponse;
+import it.uniromatre.breadexchange2_0.bakery.Week.Week;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -31,6 +33,20 @@ public class FrontEndController {
             @PathVariable Integer id
     ){
         return ResponseEntity.ok(bakeryService.getData(id));
+    }
+
+    @GetMapping("/getPlaneAddress")
+    public ResponseEntity<PlanAddBkery> getPlaneAdd(
+            @RequestParam(name = "id") int id
+    ){
+        return ResponseEntity.ok( this.bakeryService.getPlaneAdd(id) );
+    }
+
+    @GetMapping("/getWeek")
+    public ResponseEntity<Week> getWeek(
+            @RequestParam(name = "idBakery") Integer idBakery
+    ){
+        return ResponseEntity.ok(bakeryService.getWeek(idBakery));
     }
 
 
