# FrontEnd/src/openapi/openapi.json
@@ -357,6 +357,47 @@
         }
       }
     },
+    "/bakery/updateWeek": {
+      "post": {
+        "tags": [
+          "bakery-controller"
+        ],
+        "operationId": "updateWeek",
+        "parameters": [
+          {
+            "name": "IdBakery",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ModifyWeekRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/register": {
       "post": {
         "tags": [
@@ -818,6 +859,37 @@
         }
       }
     },
+    "/frontEnd/getWeek": {
+      "get": {
+        "tags": [
+          "front-end-controller"
+        ],
+        "operationId": "getWeek",
+        "parameters": [
+          {
+            "name": "idBakery",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Week"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/frontEnd/getRandomData": {
       "get": {
         "tags": [
@@ -845,6 +917,37 @@
                   "items": {
                     "$ref": "#/components/schemas/RandomDataBakeryResponse"
                   }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/frontEnd/getPlaneAddress": {
+      "get": {
+        "tags": [
+          "front-end-controller"
+        ],
+        "operationId": "getPlaneAdd",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PlanAddBkery"
                 }
               }
             }
@@ -1328,15 +1431,8 @@
               "ADMIN"
             ]
           },
-          "userName": {
-            "type": "string"
-          },
           "name": {
             "type": "string"
-          },
-          "enable": {
-            "type": "boolean",
-            "writeOnly": true
           },
           "authorities": {
             "type": "array",
@@ -1352,6 +1448,13 @@
           },
           "credentialsNonExpired": {
             "type": "boolean"
+          },
+          "enable": {
+            "type": "boolean",
+            "writeOnly": true
+          },
+          "userName": {
+            "type": "string"
           }
         }
       },
@@ -1418,6 +1521,83 @@
           },
           "description": {
             "type": "string"
+          }
+        }
+      },
+      "LocalTime": {
+        "type": "object",
+        "properties": {
+          "hour": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "minute": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "second": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "nano": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
+      "ModifyWeekRequest": {
+        "type": "object",
+        "properties": {
+          "lun": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "mar": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "mer": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "gio": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "ven": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "sab": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "dom": {
+            "$ref": "#/components/schemas/WeekDay"
+          }
+        }
+      },
+      "WeekDay": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "dayOfWeek": {
+            "type": "string"
+          },
+          "morningOpening": {
+            "$ref": "#/components/schemas/LocalTime"
+          },
+          "morningClosing": {
+            "$ref": "#/components/schemas/LocalTime"
+          },
+          "eveningOpening": {
+            "$ref": "#/components/schemas/LocalTime"
+          },
+          "eveningClosing": {
+            "$ref": "#/components/schemas/LocalTime"
+          },
+          "allDayOpen": {
+            "type": "boolean"
+          },
+          "closed": {
+            "type": "boolean"
           }
         }
       },
@@ -1650,6 +1830,36 @@
           }
         }
       },
+      "Week": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "lun": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "mar": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "mer": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "gio": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "ven": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "sab": {
+            "$ref": "#/components/schemas/WeekDay"
+          },
+          "dom": {
+            "$ref": "#/components/schemas/WeekDay"
+          }
+        }
+      },
       "RandomDataBakeryResponse": {
         "type": "object",
         "properties": {
@@ -1658,6 +1868,14 @@
             "format": "int32"
           },
           "url": {
+            "type": "string"
+          }
+        }
+      },
+      "PlanAddBkery": {
+        "type": "object",
+        "properties": {
+          "address": {
             "type": "string"
           }
         }
